--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ Dark gray: hsl(0, 0%, 59%)
 body {
     min-height: 100vh;
     background-color:var(--dark-cyan);
-    background-image:url(images/bg-pattern-top.svg), url(images/bg-pattern-bottom.svg);
+    background-image:url(bg-pattern-top.svg), url(bg-pattern-bottom.svg);
     background-position:bottom 30vh right 50vw, top 50vh left 40vw;
     background-repeat: no-repeat;
     display:flex;
