--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ Dark gray: hsl(0, 0%, 59%)
      box-sizing: border-box;
      text-align: center;
      font-weight: 400;
-     font-family: sans-serif;
+     font-family:  'Kumbh Sans', sans-serif;
      color:var(--text-color);
 }
 body {
